# sysinfo-api

./: .env.example  Cargo.toml  Dockerfile  docker-compose.yaml  readme-zh.md  readme.md
docs/: api.yaml
src/: api.rs  cfg.rs  macros.rs  main.rs  mcp.rs  middlewares.rs  models.rs  service.rs
