[package]
name = "sysinfo-api"
version = "0.1.0"
edition = "2024"

[dependencies]
ntex = { version = "^2", features = ["tokio"] }
sysinfo = "0.30"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tokio = { version = "^1", features = ["full"] }
anyhow = "^1"
log = "^0"
env_logger = "^0"
chrono = { version = "^0", features = ["serde"] }
dotenv = "^0"

ntex-basicauth = "^0"
ntex-ratelimiter = "^0"

[[bin]]
name = "sysinfo-api"
path = "src/main.rs"