[package]
name = "sysinfo-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["auth", "limit", "trace"] }
hyper = { version = "1.0", features = ["full"] }
tower_governor = "0.4"

sysinfo = "0.30"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tokio = { version = "^1", features = ["full"] }
anyhow = "^1"
log = "^0"
env_logger = "^0"
chrono = { version = "^0", features = ["serde"] }
dotenv = "^0"
base64 = "0.22"
subtle = "2.5"

[[bin]]
name = "sysinfo-api"
path = "src/main.rs"